[project]
name = "marble_maze"
version = "0.0.1"

readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "networkx ~= 3.2.1",
    "opencv-python~=4.9.0.80",
    "matplotlib~=3.8.3",
    "scipy~=1.12.0",
    "tqdm~=4.66.2"
]

[project.optional-dependencies]
test = [
    "pytest==8.1.1"
]
